--- a/src/uttt/GUI/View/Gameboard.fxml
+++ b/src/uttt/GUI/View/Gameboard.fxml
@@ -1,11 +1,236 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="uttt.GUI.Controller.GameboardController">
+   <children>
+      <GridPane fx:id="macroBoard" layoutX="48.0" layoutY="61.0" prefHeight="700.0" prefWidth="700.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="2" GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="2" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
