--- a/src/uttt/GUI/View/Gameboard.fxml
+++ b/src/uttt/GUI/View/Gameboard.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: BLACK;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="uttt.GUI.Controller.GameboardController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
    <children>
       <GridPane fx:id="macroBoard" hgap="5.0" layoutX="48.0" layoutY="61.0" prefHeight="700.0" prefWidth="700.0" vgap="5.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -21,7 +20,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane hgap="2.0" vgap="2.0">
+            <GridPane fx:id="gridPane1" hgap="2.0" vgap="2.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -44,7 +43,7 @@
                   <Button mnemonicParsing="false" prefHeight="137.0" prefWidth="189.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="1">
+            <GridPane fx:id="gridPane2" hgap="2.0" vgap="2.0" GridPane.columnIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -67,7 +66,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="2">
+            <GridPane fx:id="gridPane3" hgap="2.0" vgap="2.0" GridPane.columnIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -91,7 +90,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.rowIndex="1">
+            <GridPane fx:id="gridPane4" hgap="2.0" vgap="2.0" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -114,7 +113,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane fx:id="gridPane5" hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -138,7 +137,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <GridPane fx:id="gridPane6" hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -161,7 +160,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.rowIndex="2">
+            <GridPane fx:id="gridPane7" hgap="2.0" vgap="2.0" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -184,7 +183,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane fx:id="gridPane8" hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -207,7 +206,7 @@
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <GridPane fx:id="gridPane9" hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
