--- a/src/uttt/GUI/View/Gameboard.fxml
+++ b/src/uttt/GUI/View/Gameboard.fxml
@@ -102,15 +102,15 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn41" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn42" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn44" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn45" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn47" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn48" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn49" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn46" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn43" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
                </children>
             </GridPane>
             <GridPane fx:id="gridPane5" hgap="2.0" vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -126,15 +126,15 @@
               </rowConstraints>
                <children>
                   <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn52" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn51" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn54" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn55" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn57" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn58" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn59" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn56" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn53" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
                </children>
             </GridPane>
             <GridPane fx:id="gridPane6" hgap="2.0" vgap="2.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -149,15 +149,15 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="btn61" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" />
+                  <Button fx:id="btn62" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" />
+                  <Button fx:id="btn64" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="1" />
+                  <Button fx:id="btn65" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="btn63" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" />
+                  <Button fx:id="btn66" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="btn67" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.rowIndex="2" />
+                  <Button fx:id="btn68" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="btn69" mnemonicParsing="false" prefHeight="124.0" prefWidth="216.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <GridPane fx:id="gridPane7" hgap="2.0" vgap="2.0" GridPane.rowIndex="2">
