--- a/src/uttt/GUI/View/Gameboard.fxml
+++ b/src/uttt/GUI/View/Gameboard.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane1" prefHeight="864.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane1" prefHeight="864.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uttt.GUI.Controller.GameboardController">
    <children>
-      <ImageView fitHeight="864.0" fitWidth="800.0" onMouseClicked="#start" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="864.0" fitWidth="800.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Picture/Numbers.jpg" />
          </image>
